# novel-v11-factory

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main_ci_cd.yml
docs/: V11_Master Guide.md  Week_1.md  Week_2.md  Week_3.md  Week_4.md  Week_5.md  Week_6.md  Week_7.md  Week_8.md  v11_Factory.md
engine/: .editorconfig  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  arc_planner.py  cli.py  config.py  context_builder.py  pyproject.toml  retriever.py  story_bible_loader.py  tox.ini
engine/docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
engine/tests/: __init__.py  test_engine.py
memory/faiss_index/Pilot/: index.faiss  meta.pkl
projects/Pilot/: outline.csv  story_bible.yaml  story_bible_v11.json
projects/Pilot/episodes/: EP001.md  EP002.md  EP003.md  EP004.md  EP005.md  EP006.md  EP007.md  EP008.md  EP009.md  EP010.md  ep_001.txt  ep_002.txt  ep_003.txt
projects/Pilot/summaries/: EP001.txt  EP002.txt  EP003.txt  EP004.txt  EP005.txt  EP006.txt  EP007.txt  EP008.txt  EP009.txt  EP010.txt  ep_001.txt  ep_002.txt  ep_003.txt
schemas/: arc_diff_v11.schema.json
scripts/: __init__.py  arc_detail_v11.py  build_faiss_index_v11.py  graph_sync_v11.py  run_novel.py
tests/: test_arc_planner_unit.py  test_config.py  test_context_builder.py  test_faiss_builder.py  test_graph_sync_v11.py  test_placeholder.py  test_retriever.py  test_story_bible_loader.py
