[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-v11-factory-engine"
version = "0.0.1"
description = "The core engine for the Novel V11 Factory."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "scripts*"]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false